# screen

./: .env  .gitignore  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: check-pull-request.yml  check-push.yml
src/: lib.rs  main.rs
src/coffe_time/output/frame/: frame_generated.rs
src/coffee_time/output/frame/: mod.rs
src/gui/: mod.rs
src/gui/loader/: load_image.rs  mod.rs
src/gui/sprite/: mod.rs  sprite.rs  sprite_manager.rs
src/input_device_monitor/: mod.rs
src/input_device_monitor/app/: app_handler.rs  mod.rs
src/input_device_monitor/event/: event_handler.rs  keyboard_event_handler.rs  mod.rs
src/input_device_monitor/event/concrete/: keyboard_event_handler.rs  mod.rs  mouse_event_handler.rs
src/input_device_monitor/event_caster/: event_caster.rs  event_caster_bytes.rs  key_caster.rs  mod.rs  mouse_button_caster.rs  vec2_caster.rs  window_caster.rs
src/input_device_monitor/event_caster/abstractions/: event_serializer.rs  mod.rs
src/input_device_monitor/event_caster/clone_caster/: clone_caster.rs  event_clone_bytes_caster.rs  key_caster.rs  mod.rs  mouse_button_caster.rs  vec2_caster.rs  window_caster.rs  window_clone_caster.rs
src/input_device_monitor/event_handler/: mod.rs
src/input_device_monitor/my_event/: key.rs  mod.rs  vec2.rs  window.rs
src/input_device_monitor/sender/: mod.rs  sender.rs
src/log_handler/: log_terminal_handler.rs  mod.rs
src/socket_server/: conversion.rs  deserialization.rs  frame.rs  mod.rs  queue_manager.rs  receiver.rs  server.rs  socket_server.rs
src/sound_manager/: audio.rs
(+46 files in other folders)
