[package]
name = "screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.19.0"
rodio = "0.18.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
crossbeam-channel = "0.5"
rayon = "1.5.1"
threadpool = "1.8"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }

[lib]
path = "src/lib.rs"