[package]
name = "screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.19.0"
rodio = "0.18.0"
rand = "0.8"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
colored = "2.1.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
atty = "0.2.14"
flatbuffers = "=23.5.26"
lazy_static = "1.5.0"

[dev-dependencies]
tempfile = "3.2.0"

[lib]
path = "src/lib.rs"
